# ccanvas

./: CMakeLists.txt  README.md  main.c
assets/: fragment_shader.glsl  vertex_shader.glsl
include/: ccanvas.h  ccanvas_colours.h  ccanvas_context.h  ccanvas_defines.h  ccanvas_render.h  ccanvas_shader.h  ccanvas_window.h
src/: ccanvas_context.c  ccanvas_render.c  ccanvas_shader.c  ccanvas_window.c
